[package]
name = "BeefDarkThemeInstaller"
version = "0.1.0"
authors = ["HydrogenC <x13989@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase", "minwindef", "processenv"] }
resource = "~0.4.0"